syntax = "proto3";

package payment;

option go_package = "./adapter/pkg/payment/pb";

import "google/protobuf/Empty.proto";

service PaymentService {
  rpc FindAll(google.protobuf.Empty) returns (ListPaymentResponse);
  rpc FindAllByUserId(GetPaymentByUserIdRequest) returns (ListPaymentResponse);
  rpc FindByOrderId(GetPaymentByOrderIdRequest) returns (GetPaymentResponse);
  rpc CreateOrUpdate(CreatePaymentRequest) returns (GetCreatePaymentResponse);
  rpc UpdateReceiptNumber(UpdateReceiptNumberRequest) returns (GetPaymentResponse);
  rpc Delete(GetPaymentByOrderIdRequest) returns (google.protobuf.Empty);
  rpc GetToken(GetPaymentTokenRequest) returns (GetPaymentTokenResponse);
}
message Payment {
  int64 IdPayload = 1;
  int64 UserId = 2;
  optional string OrderId = 3;
  optional string TransactionTime = 4;
  optional string TransactionStatus = 5;
  optional string TransactionId = 6;
  optional string StatusCode = 7;
  optional string SignatureKey = 8;
  optional string SettlementTime = 9;
  optional string PaymentType = 10;
  optional string MerchantId = 11;
  optional string GrossAmount = 12;
  optional string FraudStatus = 13;
  optional string BankType = 14;
  optional string VANumber = 15;
  optional string BillerCode = 16;
  optional string BillKey = 17;
  optional string ReceiptNumber = 18;
  optional string Address = 19;
  optional string Courier = 20;
  optional string CourierService = 21;
}

message ListPaymentResponse {
  repeated Payment payment = 1;
}

message GetPaymentResponse {
  Payment payment = 1;
}

message GetPaymentByUserIdRequest {
  int64 UserId = 1;
}

message GetPaymentByOrderIdRequest {
  string OrderId = 1;
}

message GetCreatePaymentResponse {
  bool IsSuccess = 1;
}

message CreatePaymentRequest {
  bytes payment = 1;
}

message GetPaymentTokenResponse {
  map<string, string> payment = 1;
}

message UpdateReceiptNumberRequest {
  string OrderId = 1;
  string ReceiptNumber = 2;
}

message GetPaymentTokenRequest {
  int64 GrossAmount = 1;
  repeated string Items = 2;
  int64 UserId = 3;
  string CustomerName = 4;
  string Address = 5;
  string Courier = 6;
  string CourierService = 7;
  int64 ShippingCost = 8;
}